--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 extend: {
                     colors: {
                         'pixel-dark': '#131B2B', // Deep Charcoal Blue - Fondo principal (Se mantiene)
-                        'pixel-accent': '#C7E83F', // ¡NUEVO! Amarillo Cítrico/Verde Limón - Acento Principal (Alto Contraste)
+                        'pixel-accent': '#B6E0B6', // ¡NUEVO! Verde Pastel/Menta Claro - Acento Principal (Armónico)
                         'pixel-secondary': '#7F8C8D', // Soft Gray - Texto secundario (Se mantiene)
-                        'pixel-contrast-dark': '#0B6623', // ¡NUEVO! Verde Selva Profundo para contraste sutil/secciones
+                        'pixel-contrast-dark': '#054C0C', // ¡NUEVO! Verde Pino Oscuro - Contraste sutil y elegante
                         'pixel-light': '#F4F4F9', // Off-White - Texto principal (Se mantiene)
                     },
                     fontFamily: {
@@ -32,8 +32,8 @@
             font-family: 'Inter', sans-serif;
         }
         .section-heading {
-            /* Uso del nuevo color de acento Verde Limón para la línea de separación */
-            border-left: 5px solid #C7E83F; 
+            /* Uso del nuevo color de acento Verde Pastel para la línea de separación */
+            border-left: 5px solid #B6E0B6; 
         }
         /* Clase para manejar el estado abierto del acordeón */
         .accordion-open {
@@ -78,7 +78,7 @@
             <div class="bg-pixel-dark/90 p-8 rounded-2xl shadow-2xl border-4 border-pixel-accent/50">
                 <h3 class="text-4xl font-extrabold mb-4 text-pixel-accent">💥 ¡Promo de Noviembre! Automatiza tu Contenido ⏱️</h3>
                 <p class="text-xl text-pixel-light/90 mb-8 max-w-3xl mx-auto">
-                    Sabemos que el tiempo es oro. Automatiza tus **Stories/Estados** para IG/FB y WhatsApp y enfócate en lo importante.
+                    Sabemos que el tiempo es oro. Automatiza tus Stories/Estados para IG/FB y WhatsApp y enfócate en lo importante.
                 </p>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="p-4 bg-pixel-dark/90 text-pixel-light rounded-xl shadow-lg border border-pixel-accent/50">
@@ -123,14 +123,14 @@
                             Entrega: 24/48h.
                         </li>
                         <li class="flex items-center text-xs text-pixel-secondary">
-                            Difusión **No Incluida**.
+                            Difusión No Incluida.
                         </li>
                     </ul>
                 </div>
 
                 <div class="bg-pixel-secondary/20 p-6 rounded-xl shadow-lg border border-pixel-secondary/30 hover:border-pixel-accent transition duration-300">
                     <div class="text-3xl font-bold text-pixel-accent mb-2">Pieza + Alcance Semanal</div>
-                    <p class="text-pixel-light/80 mb-4">Pieza estática con **7 días de difusión viral focalizada** (10 personas/día de visibilidad).</p>
+                    <p class="text-pixel-light/80 mb-4">Pieza estática con 7 días de difusión viral focalizada (10 personas/día de visibilidad).</p>
                     <div class="text-4xl font-extrabold mb-6 text-pixel-light">
                         <span class="text-4xl font-extrabold">10.000</span> ARS
                     </div>
@@ -155,11 +155,11 @@
                     <ul class="space-y-3 text-sm text-pixel-light mb-4">
                         <li class="flex justify-between items-center border-b border-pixel-secondary/50 pb-1">
                             <span>Reel de Storytelling (Máx. 15s)</span>
-                            <span class="font-extrabold text-pixel-light"><span class="font-extrabold">15.000</span> ARS</span>
+                            <span class="font-extrabold text-pixel-light">15.000 ARS</span>
                         </li>
                         <li class="flex justify-between items-center">
                             <span>Carrusel de Valor (hasta 5 slides)</span>
-                            <span class="font-extrabold text-pixel-light"><span class="font-extrabold">25.000</span> ARS</span>
+                            <span class="font-extrabold text-pixel-light">25.000 ARS</span>
                         </li>
                     </ul>
                     <p class="mt-4 text-xs text-pixel-accent font-semibold">
@@ -189,7 +189,7 @@
                     <div class="mt-6 space-y-4 px-4 py-4">
                         <ul class="text-sm text-gray-700 list-disc list-inside space-y-3">
                             <li>**Contenido:** 5 Piezas Centrales (1 por día hábil).</li>
-                            <li>**Alcance:** Visibilidad en **50-100 personas por semana**.</li>
+                            <li>**Alcance:** Visibilidad en 50-100 personas por semana.</li>
                             <li>Inclusión de Linktree para centralizar tráfico.</li>
                             <li>**Beneficio Adicional:** 7 días de actividad pasiva (publicaciones en circulación).</li>
                             <li class="text-xs text-gray-500">Condición: Pago 100% al inicio.</li>
@@ -211,14 +211,14 @@
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            **Alcance:** Visibilidad en **300-500 personas por mes** (con triplicación de alcance vía difusión viral).
+                            **Alcance:** Visibilidad en 300-500 personas por mes (con triplicación de alcance vía difusión viral).
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
                             Linktree Profesionalizado.
                         </li>
                         <li class="flex items-center text-sm text-pixel-dark font-bold border-t border-gray-300 pt-3 mt-3">
-                            Pago en 2 Hitos: **$75.000 ARS** (Inicio) y **$75.000 ARS** (Activación de las 10 piezas restantes).
+                            Pago en 2 Hitos: 75.000 ARS (Inicio) y 75.000 ARS (Activación de las 10 piezas restantes).
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-dark text-pixel-light px-6 py-3 rounded-full font-bold hover:opacity-80 transition duration-200">Elegir Plan de Confianza</a>
@@ -227,26 +227,26 @@
                 <div class="bg-white p-6 rounded-xl shadow-2xl border-4 border-pixel-accent flex flex-col transform scale-105 z-10 hover:shadow-2xl transition duration-300">
                     <span class="text-sm font-semibold text-pixel-accent uppercase mb-2">Máximo Crecimiento</span>
                     <h4 class="text-3xl font-bold mb-4 text-pixel-accent">Paquete de ESCALAMIENTO</h4>
-                    <p class="text-gray-600 mb-6 flex-grow">Soluciones Avanzadas y Premium para el máximo liderazgo y soporte. **Alcance: 700 a 2.000 personas mensuales**.</p>
+                    <p class="text-gray-600 mb-6 flex-grow">Soluciones Avanzadas y Premium para el máximo liderazgo y soporte. Alcance: 700 a 2.000 personas mensuales.</p>
                     
                     <ul class="space-y-4 text-sm text-gray-700 mb-8">
                         <li class="p-3 border rounded-lg bg-gray-50">
-                            <h5 class="font-extrabold text-lg text-pixel-dark mb-1">AVANZADO: $200.000 ARS/mes</h5>
+                            <h5 class="font-extrabold text-lg text-pixel-dark mb-1">AVANZADO: 200.000 ARS/mes</h5>
                             <p class="text-xs text-gray-600">12 Diseños Estáticos + 1 Reel semanal. Incluye Linktree + Crecimiento Pasivo.</p>
                         </li>
                         <li class="p-3 border-2 border-pixel-accent rounded-lg bg-gray-50">
-                            <h5 class="font-extrabold text-lg text-pixel-accent mb-1">PREMIUM: $350.000 ARS/mes</h5>
-                            <p class="text-xs text-gray-600">Gestión 360: 24 Diseños + 1 Reel semanal. Incluye **Community Manager** y **Mantenimiento Web**. </p>
+                            <h5 class="font-extrabold text-lg text-pixel-accent mb-1">PREMIUM: 350.000 ARS/mes</h5>
+                            <p class="text-xs text-gray-600">Gestión 360: 24 Diseños + 1 Reel semanal. Incluye Community Manager y Mantenimiento Web. </p>
                         </li>
                         <li class="text-xs text-gray-600 font-semibold pt-2">
-                             Extra Premium: Apoyo en Facebook ADS (cubrimos **15%** del costo de inversión cada **$15.000 ARS**). 
+                             Extra Premium: Apoyo en Facebook ADS (cubrimos 15% del costo de inversión cada 15.000 ARS). 
                         </li>
                     </ul>
                     <a href="#contacto" class="w-full text-center bg-pixel-accent text-pixel-dark px-6 py-3 rounded-full font-bold hover:opacity-80 transition duration-200">Solicitar Presupuesto</a>
                 </div>
 
             </div>
-            <p class="text-center text-sm text-gray-500 mt-10">Todos los precios están expresados en Pesos Argentinos (ARS) y son válidos durante **Noviembre de 2025**.</p>
+            <p class="text-center text-sm text-gray-500 mt-10">Todos los precios están expresados en Pesos Argentinos (ARS) y son válidos durante Noviembre de 2025.</p>
         </div>
     </section>
 
