--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 extend: {
                     colors: {
                         'pixel-dark': '#131B2B', // Deep Charcoal Blue - Fondo principal (Se mantiene)
-                        'pixel-accent': '#B6E0B6', // ¡NUEVO! Verde Pastel/Menta Claro - Acento Principal (Armónico)
+                        'pixel-accent': '#EEDD82', // ¡NUEVO! Oro Suave/Khaki - Acento Principal (Pastel Armónico)
                         'pixel-secondary': '#7F8C8D', // Soft Gray - Texto secundario (Se mantiene)
-                        'pixel-contrast-dark': '#054C0C', // ¡NUEVO! Verde Pino Oscuro - Contraste sutil y elegante
+                        'pixel-contrast-dark': '#054C0C', // Verde Pino Profundo - Contraste sutil y elegante
                         'pixel-light': '#F4F4F9', // Off-White - Texto principal (Se mantiene)
                     },
                     fontFamily: {
@@ -32,8 +32,8 @@
             font-family: 'Inter', sans-serif;
         }
         .section-heading {
-            /* Uso del nuevo color de acento Verde Pastel para la línea de separación */
-            border-left: 5px solid #B6E0B6; 
+            /* Uso del nuevo color de acento Oro Suave para la línea de separación */
+            border-left: 5px solid #EEDD82; 
         }
         /* Clase para manejar el estado abierto del acordeón */
         .accordion-open {
@@ -188,10 +188,10 @@
 
                     <div class="mt-6 space-y-4 px-4 py-4">
                         <ul class="text-sm text-gray-700 list-disc list-inside space-y-3">
-                            <li>**Contenido:** 5 Piezas Centrales (1 por día hábil).</li>
-                            <li>**Alcance:** Visibilidad en 50-100 personas por semana.</li>
+                            <li><span class="font-bold">Contenido:</span> 5 Piezas Centrales (1 por día hábil).</li>
+                            <li><span class="font-bold">Alcance:</span> Visibilidad en 50-100 personas por semana.</li>
                             <li>Inclusión de Linktree para centralizar tráfico.</li>
-                            <li>**Beneficio Adicional:** 7 días de actividad pasiva (publicaciones en circulación).</li>
+                            <li><span class="font-bold">Beneficio Adicional:</span> 7 días de actividad pasiva (publicaciones en circulación).</li>
                             <li class="text-xs text-gray-500">Condición: Pago 100% al inicio.</li>
                         </ul>
                     </div>
@@ -207,11 +207,11 @@
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            **20 Piezas Totales** (12 Centrales + 8 de Soporte).
+                            <span class="font-bold">20 Piezas Totales</span> (12 Centrales + 8 de Soporte).
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            **Alcance:** Visibilidad en 300-500 personas por mes (con triplicación de alcance vía difusión viral).
+                            <span class="font-bold">Alcance:</span> Visibilidad en 300-500 personas por mes (con triplicación de alcance vía difusión viral).
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
@@ -254,7 +254,7 @@
         <div class="max-w-6xl mx-auto px-4">
             <h3 class="text-3xl font-bold mb-4 text-center section-heading inline-block px-2 text-pixel-accent">La Difusión Viral Estratégica</h3>
             <p class="text-xl text-center text-pixel-light/80 max-w-3xl mx-auto mb-8">
-                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la **región y público objetivo correcto**. Estrategias certeras y probadas con **evidencias empíricas**.
+                Es la publicación estratégica de tu contenido en nuestros canales y grupos de alta presencia, dirigida a la <strong>región y público objetivo correcto</strong>. Estrategias certeras y probadas con <strong>evidencias empíricas</strong>.
             </p>
 
             <div class="grid md:grid-cols-3 gap-8 text-center">
@@ -272,7 +272,7 @@
                     <div class="text-5xl mb-3 text-pixel-accent">👁️</div>
                     <h4 class="font-bold text-lg mb-2">Enfoque en Visibilidad</h4>
                     <p class="text-xs text-pixel-accent font-semibold">Aclaración Importante:</p>
-                    <p class="text-xs text-pixel-light/70">La difusión garantiza **visibilidad** o **alcance** exclusivamente. No incluye clics, ventas, prospectaje ni otro tipo de contacto directo.</p>
+                    <p class="text-xs text-pixel-light/70">La difusión garantiza <strong>visibilidad</strong> o <strong>alcance</strong> exclusivamente. No incluye clics, ventas, prospectaje ni otro tipo de contacto directo.</p>
                 </div>
             </div>
         </div>
