--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
                 extend: {
                     colors: {
                         'pixel-dark': '#131B2B', // Deep Charcoal Blue - Fondo principal (Se mantiene)
-                        'pixel-accent': '#EEDD82', // ¡NUEVO! Oro Suave/Khaki - Acento Principal (Pastel Armónico)
+                        'pixel-accent': '#FFD700', // ¡RESTAURADO! Amarillo Dorado Vibrante - Acento Principal
                         'pixel-secondary': '#7F8C8D', // Soft Gray - Texto secundario (Se mantiene)
-                        'pixel-contrast-dark': '#054C0C', // Verde Pino Profundo - Contraste sutil y elegante
+                        'pixel-contrast-dark': '#3B5323', // ¡RESTAURADO! Verde Oscuro/Militar para contraste sutil
+                        'pixel-promotion-bg': '#C8E6C9', // ¡NUEVO! Verde Menta Pastel para el fondo de la promoción
                         'pixel-light': '#F4F4F9', // Off-White - Texto principal (Se mantiene)
                     },
                     fontFamily: {
@@ -32,8 +33,8 @@
             font-family: 'Inter', sans-serif;
         }
         .section-heading {
-            /* Uso del nuevo color de acento Oro Suave para la línea de separación */
-            border-left: 5px solid #EEDD82; 
+            /* Uso del color de acento Amarillo para la línea de separación */
+            border-left: 5px solid #FFD700; 
         }
         /* Clase para manejar el estado abierto del acordeón */
         .accordion-open {
@@ -73,7 +74,7 @@
         </div>
     </section>
     
-    <section id="promociones" class="py-16 sm:py-20 bg-pixel-contrast-dark text-pixel-light">
+    <section id="promociones" class="py-16 sm:py-20 bg-pixel-promotion-bg text-pixel-dark"> 
         <div class="max-w-6xl mx-auto px-4 text-center">
             <div class="bg-pixel-dark/90 p-8 rounded-2xl shadow-2xl border-4 border-pixel-accent/50">
                 <h3 class="text-4xl font-extrabold mb-4 text-pixel-accent">💥 ¡Promo de Noviembre! Automatiza tu Contenido ⏱️</h3>
@@ -188,10 +189,10 @@
 
                     <div class="mt-6 space-y-4 px-4 py-4">
                         <ul class="text-sm text-gray-700 list-disc list-inside space-y-3">
-                            <li><span class="font-bold">Contenido:</span> 5 Piezas Centrales (1 por día hábil).</li>
-                            <li><span class="font-bold">Alcance:</span> Visibilidad en 50-100 personas por semana.</li>
+                            <li><strong>Contenido:</strong> 5 Piezas Centrales (1 por día hábil).</li>
+                            <li><strong>Alcance:</strong> Visibilidad en 50-100 personas por semana.</li>
                             <li>Inclusión de Linktree para centralizar tráfico.</li>
-                            <li><span class="font-bold">Beneficio Adicional:</span> 7 días de actividad pasiva (publicaciones en circulación).</li>
+                            <li><strong>Beneficio Adicional:</strong> 7 días de actividad pasiva (publicaciones en circulación).</li>
                             <li class="text-xs text-gray-500">Condición: Pago 100% al inicio.</li>
                         </ul>
                     </div>
@@ -207,11 +208,11 @@
                     <ul class="space-y-3 text-sm text-gray-700 mb-8">
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            <span class="font-bold">20 Piezas Totales</span> (12 Centrales + 8 de Soporte).
+                            <strong>20 Piezas Totales</strong> (12 Centrales + 8 de Soporte).
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
-                            <span class="font-bold">Alcance:</span> Visibilidad en 300-500 personas por mes (con triplicación de alcance vía difusión viral).
+                            <strong>Alcance:</strong> Visibilidad en 300-500 personas por mes (con triplicación de alcance vía difusión viral).
                         </li>
                         <li class="flex items-center text-sm text-gray-700">
                             <svg class="w-5 h-5 mr-2 text-pixel-accent" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg>
