--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                         'pixel-secondary': '#7F8C8D', // Soft Gray
                         'pixel-light': '#FFFFFF',   // Blanco Puro
                         
-                        // Colores Festivos
+                        // Colores Festivos (Red Festive actualizado a un carmesí con toque azulado)
                         'gold-festive': '#FFD700',  // Dorado
-                        'red-festive': '#E3324C',   // Rojo Festivo
+                        'red-festive': '#C7384B',   // **Carmesí Profundo (Nuevo)**
                         'green-festive': '#1E8C5A', // Verde Joya
                     },
                     fontFamily: {
@@ -46,11 +46,11 @@
 
         /* Keyframes Animación de Luces Navideñas */
         @keyframes twinkle-lights {
-            0%   { background-color: #E3324C; box-shadow: 0 0 10px #E3324C; }
+            0%   { background-color: #C7384B; box-shadow: 0 0 10px #C7384B; } /* Nuevo color */
             25%  { background-color: #1E8C5A; box-shadow: 0 0 10px #1E8C5A; }
             50%  { background-color: #7F00FF; box-shadow: 0 0 10px #7F00FF; }
             75%  { background-color: #FFD700; box-shadow: 0 0 10px #FFD700; }
-            100% { background-color: #E3324C; box-shadow: 0 0 10px #E3324C; }
+            100% { background-color: #C7384B; box-shadow: 0 0 10px #C7384B; } /* Nuevo color */
         }
 
         /* Clase para la animación */
