--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <span class="block text-gold-festive">La estrategia siempre precede al diseño.</span>
             </h2>
             <p class="text-xl text-pixel-secondary mb-8 sm:mb-10">
-                Implementamos una Metodología Estratégica clara para transformar tu inversión en diseño en confianza y posicionamiento de marca. Propuesta válida para **Noviembre 2025**.
+                Implementamos una Metodología Estratégica clara para transformar tu inversión en diseño en confianza y posicionamiento de marca. Propuesta válida para **Diciembre 2025**.
             </p>
             <a id="main-cta-button" href="#diagnostico" class="inline-block bg-pixel-accent text-pixel-light px-10 py-4 rounded-full font-extrabold text-lg shadow-xl hover-glow transform hover:scale-105 transition duration-300 ease-in-out">
                 INICIAR EL DIAGNÓSTICO ESTRATÉGICO
@@ -108,8 +108,8 @@
                         </p>
                         <ul class="text-sm text-pixel-light/80 list-disc list-inside space-y-1">
                             <li>Obtendrás un **backup de investigación** sobre tu negocio con una Hoja de Ruta clave.</li>
-                            <li>Incluye: Nicho, Mecánica de Venta, 5 Ideas de Contenido, **tips y recomendaciones profundas**.</li>
-                            <li>Entrega garantizada en **48 horas**.</li>
+                            <li>Incluye: Nicho, Mecánica de Venta, 5 Ideas de Contenido, tips y recomendaciones profundas.</li>
+                            <li>Entrega garantizada en 48 horas.</li>
                         </ul>
                         <p class="mt-4 p-2 bg-red-festive/20 text-red-festive font-bold text-sm rounded-md border border-red-festive">
                             OFERTA EXCLUSIVA: Incluye un Reel de 30 segundos gratuito al adquirir cualquier paquete, oferta oficial o presupuesto personalizado (una vez completada la Hoja de Ruta).
@@ -127,7 +127,7 @@
 
     <section id="paquetes-adquisicion" class="py-16 sm:py-20 bg-pixel-dark">
         <div class="max-w-6xl mx-auto px-4">
-            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading text-pixel-light">2. Paquetes de Adquisición y Volumen (Venta Rápida)</h3>
+            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading text-pixel-light">2. Packs de Historias</h3>
             <p class="text-lg text-pixel-secondary mb-8 max-w-4xl">
                 Diseñados para clientes que ya poseen el Chequeo Rápido y necesitan una ejecución inmediata de las piezas más urgentes. El precio es remanente, considerando el Chequeo ya abonado.
             </p>
@@ -170,8 +170,8 @@
 
     <section id="abonos" class="py-16 sm:py-20 bg-pixel-light text-pixel-dark">
         <div class="max-w-6xl mx-auto px-4">
-            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading border-pixel-dark">3. Abonos Mensuales (Fidelización y Recurrencia)</h3>
-            <p class="text-xl mb-12 max-w-4xl text-gray-700">Planes diseñados para generar un impacto sostenido, basados en el compromiso mutuo y el crecimiento a largo plazo.</p>
+            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading border-pixel-dark">3. Opciones Mensuales</h3>
+            <p class="text-xl mb-12 max-w-4xl text-gray-700">Planes diseñados para generar un impacto sostenido, basados en el compromiso mutuo y el crecimiento a largo plazo (en caso de necesitar un presupuesto personalizado te espera un regalito del 30% de descuento).</p>
 
             <div class="grid md:grid-cols-3 gap-8">
                  
@@ -310,7 +310,7 @@
 
     <section id="artistico" class="py-16 sm:py-20 bg-pixel-dark border-t border-red-festive/50">
         <div class="max-w-6xl mx-auto px-4">
-            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading text-red-festive">5. Solo Diseños y Pedidos Artísticos (Tu Faceta Creativa)</h3>
+            <h3 class="text-3xl font-bold mb-6 pl-4 section-heading text-red-festive">5. Solo Diseños y Pedidos Artísticos</h3>
             <p class="text-lg text-pixel-secondary mb-8 max-w-4xl">
                 Para proyectos que requieren un enfoque puramente artístico o diseños fuera de la estrategia de venta central, como ilustraciones, material de branding complejo o piezas experimentales.
             </p>
@@ -318,7 +318,7 @@
             <div class="p-6 rounded-xl bg-green-festive/10 shadow-lg border border-green-festive/50">
                 <h4 class="text-2xl font-extrabold text-green-festive mb-3">Modelo de Presupuesto Base por Día Laborado</h4>
                 <p class="text-pixel-light/90 mb-4">
-                    Estos proyectos se cotizan con un presupuesto base diario. Es el camino para tus pedidos extra y artísticos.
+                    Estos proyectos se cotizan con un presupuesto base diario. Es el camino para una hoja de ruta original siguiendo el lineamiento de tu creatividad.
                 </p>
                 
                 <div class="grid md:grid-cols-2 gap-4">
@@ -365,7 +365,7 @@
                 <div>
                     <h4 class="text-2xl font-bold mb-3 text-pixel-accent">3. Historias Interactivas (Gamificación)</h4>
                     <p class="text-gray-700">
-                        Diseño de secuencias de Instagram Stories que funcionan como un juego o una pequeña aventura interactiva. Elevan drásticamente el Engagement Rate.
+                        Diseño de secuencias de Instagram Stories que funcionan como un juego o una pequeña aventura interactiva. Elevan drásticamente el Rango de Alcance (Engagement Rate).
                     </p>
                 </div>
                 <div>
@@ -442,3 +442,4 @@
     </script>
 </body>
 </html>
+
